--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,6 +74,8 @@ services:
     image: jenkins/jenkins:lts
     container_name: ecolib_jenkins
     user: root
+    environment:
+      - JAVA_OPTS=-Dhudson.plugins.git.GitSCM.ALLOW_LOCAL_CHECKOUT=true
     ports:
       - "8080:8080"
       - "50000:50000"
