--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,6 +73,8 @@ services:
   jenkins:
     image: jenkins/jenkins:lts
     container_name: ecolib_jenkins
+    environment:
+      - JAVA_OPTS=-Dhudson.plugins.git.GitSCM.ALLOW_LOCAL_CHECKOUT=true
     user: root
     ports:
       - "8080:8080"
