--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ DATABASE_URL=postgres://admin:iphone4g@db:5432/ecolibrary_db
 # --- Configuración Django ---
 DJANGO_SECRET_KEY=iPhone4G-
 DEBUG=True
+SUPER_SECRET_KEY_WEB=django-insecure-8vk4+!Szfi+8@$$pccesg%-y-53&s1@mr!4@v71olzzyjg8&
 
 # URL interna para que el contenedor WEB hable con la API
 API_INTERNAL_URL=http://api:8000
